--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,13 @@
-Version 3.x-1.0
+Version 4.1 + 3.1
+ - Created two branches to support both Solr search platforms.
+ - Added two more unit test for asserting the correct response of -set, -from and -until requests.
+ - Drop the index before the unit tests and demo starts.
+
+Version 3.1
  - Include a runnable demo.
  - More verbose readme.
  - Unit tests to assert that the plugin handles OAI2 requests as described at http://www.openarchives.org/OAI/2.0/openarchivesprotocol.htm
  - Project is branched and version reflects the targeted Apache Solr search platform.
 
 Version 1
-- Inception June 2012
+- Inception June 2012.
