--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,9 @@ Version 4.1 + 3.1
  - Created two branches to support both Solr search platforms.
  - Added two more unit test for asserting the correct response of -set, -from and -until requests.
  - Drop the index before the unit tests and demo starts.
+ - Apply OAI2 UTCdatetime validation by applying the granularity set in the Identify.xml document.
+ - Added a datestamp template in the oai.xsl base xslt for mappin Solr datestamps to the OAI2 UTCdatetime format.
+ - Included a solr namespace for the solr metadataPrefix example.
 
 Version 3.1
  - Include a runnable demo.
